# pubsub-push-config-injecter

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Justfile  README.md  kind-config.yaml
.github/workflows/: build-n-release.yaml  trigger-chart-build.yaml
certs/: ca.conf  ca.crt  ca.key
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service-account.yaml  webhook-configuration.yaml
manifests/: crd-pubsubsubscriptions.pubsub.cnrm.cloud.google.com.yaml  pubsub-subscription-example.yaml  secret-push-endpoint.yaml
src/: main.rs  push_config_injecter.rs
